--- a/penaltydev/src/style.css
+++ b/penaltydev/src/style.css
@@ -4,3 +4,75 @@
     outline: 0;
     box-sizing: 0;
 }
+
+body {
+    overflow-x: hidden;
+}
+
+.slider-principal {
+    background-color: #1D1D1D;
+}
+
+#content-bolas-penalty {
+    background: #111111;
+    height: 1908px;
+}
+.content-filter {
+    display: flex;
+    flex-flow: column wrap;
+    text-align: center;
+}
+
+.title-penalty {
+    color: #fff;
+    margin-bottom: 20px;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 36px;
+}
+
+.content-filter ul {
+    text-align: center;
+    display: flex;
+    width: 100%;
+    height: 30px;
+    justify-content: center;
+    color: #fff;
+}
+
+
+.content-filter ul li {  
+    line-height: 19px; 
+    width: 74px;
+    height: 39px;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    border: 1px solid #666666;
+    margin: 10px;
+    color: #666666;
+}
+
+.content-filter ul li:hover {   
+    color: #55DB40;
+    border: 1px solid #55DB40;
+}
+
+
+.content-filter ul li a { 
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    text-decoration: none;
+    color: #666666;
+  }
+
+  .content-filter ul li a:hover {  
+    color: #55DB40;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+  }
