--- a/penaltydev/src/components/Header/style.css
+++ b/penaltydev/src/components/Header/style.css
@@ -3442,7 +3442,8 @@ body>main>section:nth-child(6)>div>div.shelf.shelf--main.n8colunas>h2 {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 18px
+    padding: 15px 18px;
+    background: #1D1D1D;
 }
 
 @media (min-width: 769px) {
@@ -4107,7 +4108,7 @@ body>main>section:nth-child(6)>div>div.shelf.shelf--main.n8colunas>h2 {
         left:auto;
         z-index: 3;
         position: relative;
-        background-color: #fff
+        background-color: #1D1D1D;
     }
 }
 
@@ -4382,7 +4383,7 @@ body>main>section:nth-child(6)>div>div.shelf.shelf--main.n8colunas>h2 {
 }
 
 .nav__list {
-    background-color: #fff
+    background-color: #1D1D1D;
 }
 
 .nav__list--secondary {
@@ -4542,7 +4543,7 @@ body>main>section:nth-child(6)>div>div.shelf.shelf--main.n8colunas>h2 {
     font-family: Trebuchet MS,Lucida Sans,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
-    color: #24282b;
+    color: #666;
     padding: 13px 18px;
     display: block;
     transition: all .3s;
