--- a/penaltydev/src/pages/main/style.css
+++ b/penaltydev/src/pages/main/style.css
@@ -6,7 +6,7 @@ body {
 
 #content-bolas-penalty {
     background: #111111;
-    height: 1908px;
+    height: 1500px !important;
 }
 .content-filter {
     display: flex;
@@ -52,6 +52,7 @@ body {
     color: #55DB40;
     border: 1px solid #55DB40;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 
@@ -94,14 +95,16 @@ body {
   }
 
   .content-products .content-box span {
-    width: 276px;
-    height: 54px;
-    font-style: normal;
+      font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 18px;     
     display: flex;
     align-items: center;    
+  }
+  .content-products .content-box span strong { 
+    color: red;
+    margin-left: 5px;
   }
 
   .content-products .content-box strong.preco {
@@ -120,21 +123,51 @@ body {
     line-height: 14px;  
     text-align: center;  
     color: #FFFFFF;
+    height: 30px;
    }
 
    .opcoes-bolas {
        display: flex;
+       height: 50px;
+   }
+
+   .opcoes-bolas .select-tamanho {
+       color: red;
+       margin-left: 5px;
    }
 
    .opcoes-bolas li { 
         width: 40px;
         height: 39px;
-        border: 1px solid #666666;
-        box-sizing: border-box;
-        border-radius: 3px;
-        margin: 5px;
-        justify-content: center;
+        background-image: url("https://lojaflecha.com.br/wp-content/uploads/2020/09/icone-opcao-bola.png");
+        background-size: contain;
+        background-repeat: no-repeat;
    }
+
+   .opcoes-bolas li:hover li { 
+    width: 40px;
+    height: 39px;
+    background-image: url("https://lojaflecha.com.br/wp-content/uploads/2020/09/icone-opcao-bola.png") !important;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer !important;
+}
+
+.opcoes-bolas li:active { 
+    width: 40px;
+    height: 39px;
+    background-image: url("https://lojaflecha.com.br/wp-content/uploads/2020/09/icone-opcao-bola-ativa.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+
+   .icone-opcoes-bola {
+   
+    height: 35px;
+    width: 35px
+    }
 
    .opcoes-bolas li span { 
     font-size: 0 !important;
@@ -149,8 +182,14 @@ body {
     height: 39px;
     border: 1px solid #666666;
     box-sizing: border-box;
+    margin: 5px;
    }
 
+   .icone-tamanhos span {
+    padding: 12px 15px;
+    }
+ 
+    
    .adicionar-carrinho { 
     position: relative;
     top: 20px;
@@ -178,4 +217,13 @@ body {
     height: 108px;
     width: 420px;
     background: linear-gradient(180deg, #111111 0%, #1D1D1D 100%);
+}
+
+.box-tecnologia li .icone-tecnologia { 
+    font-size: 0;
+    width: 130px;
+    height: 120px;
+    background-image: url("https://lojaflecha.com.br/wp-content/uploads/2020/09/icone-neotec.png");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
